Immediate program generation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="web/console.js"></script>
 </head>
 <body>
-    <div id="program-text" contenteditable="true"></div>
+    <textarea id="program-text"></textarea>
     <div id="programs-running"></div>
 </body>
 </html>
