Buttons working, menu improvements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <script src="web/console.js"></script>
 </head>
 <body>
-    <textarea id="program-text"></textarea>
-    <div id="programs-running"></div>
+    <div id="title"><h1>Valence</h1></div>
+    <div id="left-menu"></div>
+    <div id="main-content">
+        <div id="text-holder"><textarea id="program-text"></textarea></div>
+        <div id="control-menu">
+            <div id="lang-insert"></div>
+            <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /></div>
+        </div>
+        <h3>Interpretations</h3>
+        <div id="programs-running"></div>
+    </div>
 </body>
 </html>
