--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <script src="web/console.js"></script>
 </head>
 <body>
-    <div id="title"><h1>Valence</h1></div>
+    <div id="title">
+        <h1>Valence</h1>
+        <p>a language of<br/> structural ambiguity</p>
+        <p><a href="https://danieltemkin.com">Daniel Temkin</a>, 2024</p>
+        <p>Forty-Four Esolangs</p>
+    </div>
     <div id="left-menu"></div>
     <div id="main-content">
-        <div id="text-holder"><textarea id="program-text"></textarea></div>
+        <div id="text-holder"><textarea id="program-text"></textarea><br/>
+            <span>Code Editor</span>
+        </div>
         <div id="control-menu">
             <div id="lang-insert"></div>
             <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /></div>
         </div>
+        <hr>
         <h3>Interpretations</h3>
         <div id="programs-running"></div>
     </div>
