--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="valence.parser.js"></script>
     <script src="valence.interpreter.js"></script>
     <script src="web/console.js"></script>
+    <title>Valence</title>
 </head>
 <body>
     <div id="title">
         <h1>Valence</h1>
-        <p>a language of<br/> structural ambiguity</p>
+        <p>a language of homonymy && structural ambiguity</p>
         <p><a href="https://danieltemkin.com">Daniel Temkin</a>, 2024</p>
-        <p>Forty-Four Esolangs</p>
+        <p>part of Forty-Four Esolangs, to be published Sept 2025</p>
     </div>
     <div id="left-menu"></div>
     <div id="main-content">
@@ -24,6 +25,7 @@
         <div id="control-menu">
             <div id="lang-insert"></div>
             <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /></div>
+            <div id="intpt-msg"></div>
         </div>
         <hr>
         <h3>Interpretations</h3>
