Identifies bad programs, beginning of promises work

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div id="control-menu">
             <div id="lang-insert"></div>
             <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /></div>
-            <div id="intpt-msg"></div>
+            <div id="intpt-msg" class="interface">0 interpretations</div>
+            <div class="interface"><input type="checkbox" onchange="run_hide_progs(this);" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
         </div>
         <hr>
         <h3>Interpretations</h3>
