--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         </div>
         <div id="control-menu">
             <div id="lang-insert"></div>
-            <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /></div>
-            <div id="intpt-msg" class="interface">0 interpretations, 0 runnable</div>
-            <div class="interface"><input type="checkbox" onchange="run_hide_progs(this);" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
+            <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" /><span id="intpt-msg" class="interface">0 interpretations, 0 runnable</span></div>
+            <div class="interface"><input type="checkbox" onchange="run_hide_progs();" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
         </div>
         <hr>
         <h3>Interpretations</h3>
