--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <span>Code Editor</span>
         </div>
         <div id="control-menu">
-            <div id="lang-insert"></div>
+            <div id="top-row">
+                <span id="lang-insert"></span>
+                Speed: <span id="additional-controls"> ms</span>
+            </div>
             <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" id="run-stop" onclick="run_stop();" /><span id="intpt-msg" class="interface">0 interpretations, 0 runnable</span></div>
             <div class="interface"><input type="checkbox" onchange="run_hide_progs();" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
         </div>
