--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
         <div id="control-menu">
             <div id="top-row">
                 <span id="lang-insert"></span>
-                Speed: <span id="additional-controls"> ms</span>
             </div>
             <div id="play-controls"><input type="button" class="other-btn btn" value="Run All" id="run-stop" onclick="run_stop();" /><span id="intpt-msg" class="interface">0 interpretations, 0 runnable</span></div>
-            <div class="interface"><input type="checkbox" onchange="run_hide_progs();" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
+            <div class="interface"> Speed: <span id="additional-controls"> ms</span> <input type="checkbox" onchange="run_hide_progs();" id="hide_nonrun"> <label for="hide_nonrun">hide non-runnable</label></div>
         </div>
         <hr>
         <h3>Interpretations</h3>
