Moved types, fixed tests

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="valence.lexicon.js"></script>
     <script src="valence.scanner.js"></script>
     <script src="valence.parser.js"></script>
+    <script src="valence.types.js"></script>
     <script src="valence.interpreter.js"></script>
     <script src="web/console.js"></script>
     <title>Valence</title>
