Add link to book

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Valence</h1>
         <p>a language of homonymy && structural ambiguity</p>
         <p><a href="https://danieltemkin.com">Daniel Temkin</a>, 2024</p>
-        <p>part of Forty-Four Esolangs, to be published Sept 2025</p>
+        <p>part of <a href="https://www.penguinrandomhouse.com/books/798086/forty-four-esolangs-by-daniel-temkin-foreword-by-allison-parrish/">Forty-Four Esolangs</a>, to be published Sept 2025</p>
     </div>
     <div id="left-menu"></div>
     <div id="main-content">
