--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="web/styles.css"></link>
+    <link rel="stylesheet" href="web/styles.css"/>
     <script src="valence.lexicon.js"></script>
     <script src="valence.scanner.js"></script>
     <script src="valence.parser.js"></script>
